[package]
name = "interrupt_macro"
version = "0.1.0"
edition = "2021"
authors = ["Jakob Dannel <jakob.dannel@t-online.de>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.75", features = ["full", "fold"]}
quote = "1.0.9"

[lib]
proc-macro = true
